# Active-Planning-agent

./: .gitignore  README.md  pyproject.toml
examples/: spike.py
src/: main.py
src/agent/: graph.py  nodes.py  prompts.py  tools.py
src/models/: intent.py  plan.py  state.py
src/services/: context_manager.py  plan_manager.py
src/ui/: cli.py  renderer.py
tests/integration/: test_agent.py
tests/unit/: conftest.py  test_context_manager.py  test_plan_manager.py
